--- a/Bump/Bump/Views/ForgetPassword.xaml
+++ b/Bump/Bump/Views/ForgetPassword.xaml
@@ -4,6 +4,7 @@
              xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
              x:Class="Bump.Views.ForgetPassword"
              xmlns:ViewModels="clr-namespace:Bump.ViewModels"
+             xmlns:Utils="clr-namespace:Bump.Utils"
              NavigationPage.HasNavigationBar="False"
              XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D">
     <ContentPage.BindingContext>
@@ -12,10 +13,10 @@
     <ContentPage.Content>
         <StackLayout Margin="10" Padding="10" Spacing="20">
             <StackLayout Margin="0" Spacing="10">
-                <Label Text="Reset Password"  TextTransform="None" HorizontalOptions="StartAndExpand"
+                <Label  Text="{Utils:Translate Reset_Password}"   TextTransform="None" HorizontalOptions="StartAndExpand"
                    TextColor="#DC384D" FontAttributes="Bold" FontSize="Title"  />
                 <Image Source="undraw_forgot_password_gi2d" HorizontalOptions="CenterAndExpand"/>
-                <Label Text="Enter the email associated with your account and we'll send an email with instruction to reset your password."
+                <Label  Text="{Utils:Translate password_describe }" 
                    Margin="20,15,10,0" FontSize="Large" FontAttributes="Bold"/>
             </StackLayout>
 
@@ -25,7 +26,7 @@
                        UnderlineColor="#B00020" TintColor="#B00020"
                        Placeholder="Email" PlaceholderColor="Gray"                       
                        HeightRequest="40"  BackgroundColor="#EAEAEA" InputType="Email"/>
-                <Button Text="Send Email" TextTransform="None" 
+                <Button   Text="{Utils:Translate Send_Email}"  TextTransform="None" 
                         TextColor="White" FontAttributes="Bold" 
                         BackgroundColor="#DC384D" CornerRadius="5" 
                         FontSize="Medium" />
