--- a/Bump/Bump/Views/MainPageContribute/ContributeFlyout.xaml
+++ b/Bump/Bump/Views/MainPageContribute/ContributeFlyout.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bump.Views.MainPageContribute.ContributeFlyout"
              xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
+              xmlns:Utils="clr-namespace:Bump.Utils"
              NavigationPage.HasNavigationBar="False"
              XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D"
              Title="Flyout" >
@@ -14,34 +15,51 @@
                      HorizontalOptions="FillAndExpand">
                 <Button Text="English" TextTransform="None" TextColor="#FFFFFF"
                     FontAttributes="Bold" HorizontalOptions="FillAndExpand" 
-                    CornerRadius="5" BackgroundColor="#DC384D"/>
+                    CornerRadius="5" BackgroundColor="#DC384D"
+                        Command="{Binding ChangeLanguageCommand}" CommandParameter="en-US"/>
                 <Button Text="عربي" TextColor="#DC384D" BackgroundColor="#FFFFFF"
                     FontAttributes="Bold"
-                    CornerRadius="5" HorizontalOptions="FillAndExpand" />
+                    CornerRadius="5" HorizontalOptions="FillAndExpand" 
+                        Command="{Binding ChangeLanguageCommand}" CommandParameter="ar-JO"/>
             </StackLayout>
 
-            <StackLayout Margin="0" Padding="0" Spacing="10">
-                <Button ImageSource="customer_service" Text="Contact Us" TextTransform="None"
-                    TextColor="White" FontAttributes="Bold"
-                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
-                    BackgroundColor="Transparent" Padding="0"
-                    Clicked="OpenContactUsPage" />
-                <Button ImageSource="suggestions" Text="Suggestions" TextTransform="None"
-                    TextColor="White" FontAttributes="Bold"
-                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
-                    BackgroundColor="Transparent" Padding="0" Clicked="OpenSuggestionPage"/>
-                <Button ImageSource="invite" Text="Invite a friend" TextTransform="None"
-                    TextColor="White" FontAttributes="Bold"
-                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
-                    BackgroundColor="Transparent" Padding="0" />
-                <Button ImageSource="help" Text="About" TextTransform="None"
-                    TextColor="White" FontAttributes="Bold"
-                    ContentLayout="Left,60" HorizontalOptions="StartAndExpand"
-                    BackgroundColor="Transparent" Padding="0"
-                    Clicked="OpenAboutPage"/>
-                <Button ImageSource="out" Text="Log Out" TextColor="#FFFFFF" TextTransform="None" 
-                        FontAttributes="Bold" ContentLayout="left,50" HorizontalOptions="StartAndExpand"
-                        BackgroundColor="Transparent" Clicked="OpenMainPage" Padding="5,0" />
+            <StackLayout Margin="0" Padding="0" Spacing="20">
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                    <Image Source="customer_service" Aspect="AspectFit"/>
+                    <Label Text="{Utils:Translate Contact_Us}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding OpenContactUsPageCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                    <Image Source="suggestions" Aspect="AspectFit"/>
+                    <Label Text="{Utils:Translate Suggestions}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding OpenSuggestionPageCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                    <Image Source="invite" Aspect="AspectFit"/>
+                    <Label Text="{Utils:Translate Invite_friend}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding InviteOtherPeopleCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                    <Image Source="help" Aspect="AspectFit"/>
+                    <Label Text="{Utils:Translate About}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding OpenAboutPageCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="0" Spacing="20">
+                    <Image Source="out" Aspect="AspectFit"/>
+                    <Label Text="{Utils:Translate Log_out}" TextColor="White" FontAttributes="Bold" VerticalTextAlignment="Center"/>
+                    <StackLayout.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding OpenMainPageCommand}"/>
+                    </StackLayout.GestureRecognizers>
+                </StackLayout>
+              
             </StackLayout>
         </StackLayout>
     </Grid>
