--- a/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
+++ b/Bump/Bump/Views/MainPageView/MainPageDetail.xaml
@@ -2,5 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bump.Views.MainPageView.MainPageDetail"
-             xmlns:XamainMap="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
-             Title="Detail"/>
+             Title=" "             
+             xmlns:XFMaterial="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
+             XFMaterial:MaterialNavigationPage.AppBarTitleTextColor="White"
+             XFMaterial:MaterialNavigationPage.StatusBarColor="#DC384D"
+             XFMaterial:MaterialNavigationPage.AppBarColor="#DC384D"/>
