--- a/Bump/Bump/Views/Suggestions.xaml
+++ b/Bump/Bump/Views/Suggestions.xaml
@@ -25,12 +25,12 @@
                     <XFMaterial:MaterialTextField 
                        Text="{Binding Suggestion.Subject}" 
                        UnderlineColor="#B00020" TintColor="#B00020"
-                       Placeholder="Subject" PlaceholderColor="Gray"                       
+                       Placeholder="{Utils:Translate Subject}" PlaceholderColor="Gray"                       
                        HeightRequest="40"  BackgroundColor="#EAEAEA" InputType="Text"/>
 
                     <Editor Text="{Binding Suggestion.Description}"
                             HeightRequest="180" VerticalOptions="Start"                            
-                            Placeholder="Description" PlaceholderColor="Gray" 
+                            Placeholder="{Utils:Translate Description}" PlaceholderColor="Gray" 
                             BackgroundColor="#EAEAEA"/>
                 </StackLayout>
 
