--- a/Bump/Bump/Views/About.xaml
+++ b/Bump/Bump/Views/About.xaml
@@ -56,16 +56,16 @@
                 <StackLayout Margin="0" Padding="0" Spacing="5" >
                     <Button ImageSource="email" Text="Joud  AL-dhadleh" TextColor="Gray" TextTransform="None"  FontSize="Medium"
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" 
-                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="alaa.s.jaber.97@gmail.com"/>
+                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="Jnaldahadleh17@cit.just.edu.jo"/>
                     <Button ImageSource="email" Text=" Heba  AL-ahmad" TextColor="Gray" TextTransform="None" FontSize="Medium" 
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent"
-                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="alaa.s.jaber.97@gmail.com"/>
+                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="hsalahmad17@cit.just.edu.jo"/>
                     <Button ImageSource="email" Text=" Saja  dahadha" TextColor="Gray" TextTransform="None" FontSize="Medium" 
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent"
-                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="alaa.s.jaber.97@gmail.com"/>
+                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="sadahadha17@cit.just.edu.jo"/>
                     <Button ImageSource="email" Text=" Raghad  AL-khateeb" TextColor="Gray" TextTransform="None" FontSize="Medium" 
                         FontAttributes="Bold" ContentLayout="left,10" HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" 
-                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="alaa.s.jaber.97@gmail.com"/>
+                            Command="{Binding OpenEmailMessageCommand}" CommandParameter="raghad.k.alkhateeb@gmail.com"/>
                 </StackLayout>
             </StackLayout>
             <StackLayout Orientation="Horizontal" Margin="0" VerticalOptions="EndAndExpand">
